# robotpy-installer

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: dist.yml  reviewdog.yml
robotpy_installer/: __init__.py  __main__.py  _bootstrap.py  _pipstub.py  cacheserver.py  cli_deploy.py  cli_deploy_info.py  cli_init.py  cli_installer.py  cli_makeoffline.py  cli_project.py  cli_sync.py  cli_undeploy.py  deploy.py  deploy_info.py  errors.py  installer.py  opkgrepo.py  pypackages.py  pyproject.py  roborio_utils.py  robot_utils.py  robotfinder.py  sshcontroller.py  undeploy.py  utils.py  wpilib_preferences.py
robotpy_installer/opkg_cache/: python37-robotpy-ctre_2019.3.2_cortexa9-vfpv3.ipk  python37-robotpy-ctre_2019.3.2_cortexa9-vfpv3.ipk.jmd  python37-robotpy-pathfinder_0.2.6_cortexa9-vfpv3.ipk  python37-robotpy-pathfinder_0.2.6_cortexa9-vfpv3.ipk.jmd  python37_3.7.2-r0_cortexa9-vfpv3.ipk.jmd
robotpy_installer/win32/: plink.exe.jmd  psftp.exe.jmd
tests/: TEST_COVERAGE.md  sample-requirements.txt  test_basic.py  test_deploy.py  test_pyproject.py
