[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "robotpy-installer"
dynamic = ["version"]
description = "Installation utility program for RobotPy"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    { name = "RobotPy Development Team", email = "robotpy@googlegroups.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "packaging>=23.2",
    "paramiko",
    "pip",
    "pynetconsole~=2.0.2",
    "robotpy-cli~=2024.0",
    "tomli",
    "tomlkit",
]

[project.urls]
"Source code" = "https://github.com/robotpy/robotpy-installer"

[project.scripts]
robotpy-installer = "robotpy_installer.installer:main"

[project.entry-points.robotpy]
deploy = "robotpy_installer.cli_deploy:Deploy"
deploy-info = "robotpy_installer.cli_deploy_info:DeployInfo"
init = "robotpy_installer.cli_init:Init"
installer = "robotpy_installer.cli_installer:Installer"
project = "robotpy_installer.cli_project:Project"
sync = "robotpy_installer.cli_sync:Sync"
undeploy = "robotpy_installer.cli_undeploy:Undeploy"


[tool.hatch.build]
include = ["robotpy_installer"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "robotpy_installer/version.py"
