[metadata]
name = robotpy-installer
description = Installation utility program for RobotPy
long_description = file: README.rst
long_description_content_type = text/x-rst
author = RobotPy Development Team
author_email = robotpy@googlegroups.com
url = https://github.com/robotpy/robotpy-installer
license = BSD
# Include the license file in wheels.
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    click
    paramiko
    dataclasses; python_version < '3.7'
setup_requires =
    setuptools_scm > 6
python_requires = >=3.6

[options.entry_points]
console_scripts =
    robotpy-installer = robotpy_installer.installer:main
