[metadata]
name = robotpy-installer
description = Installation utility program for RobotPy
long_description = file: README.rst
long_description_content_type = text/x-rst
author = RobotPy Development Team
author_email = robotpy@googlegroups.com
url = https://github.com/robotpy/robotpy-installer
license = BSD
# Include the license file in wheels.
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    click
    paramiko
    pynetconsole~=2.0.2
    robotpy-cli~=2024.0b
setup_requires =
    setuptools_scm > 6
python_requires = >=3.8

[options.entry_points]
console_scripts =
    robotpy-installer = robotpy_installer.installer:main
robotpy =
    deploy = robotpy_installer.cli_deploy:Deploy
    deploy-info = robotpy_installer.cli_deploy_info:DeployInfo
    undeploy = robotpy_installer.cli_undeploy:Undeploy
